--- a/configure.ac
+++ b/configure.ac
@@ -84,6 +84,7 @@ case ${host_os} in
     win32=true
     GLOBAL_CFLAGS+=" -DWIN32 -D__LITTLE_ENDIAN__=1"
     AC_LDFLAGS+=" -static-libgcc"
+    AC_LDADD+=" -lintl -liconv -lcrypt32"
     ;;
   darwin*)
     AC_MSG_RESULT([${host_os}])
