--- a/idevicerestoreCmdLine/idevicerestoreParams.ini
+++ b/idevicerestoreCmdLine/idevicerestoreParams.ini
@@ -10,12 +10,9 @@ UID=397817261621294
 ROM=C:\Program Files (x86)\MCE-100\MaintenanceApps\ROM\iPhone12,1_18.5_22F76_Restore.ipsw
 
 
-
 [2253]
 UID=7934737916788766
 ROM=C:\Program Files (x86)\MCE-100\MaintenanceApps\ROM\iPhone14,2_18.5_22F76_Restore.ipsw
-
-
 
 [2271]
 UID=6290745092374574
@@ -24,6 +21,18 @@ ROM=C:\Program Files (x86)\MCE-100\MaintenanceApps\ROM\iPhone12,1_18.5_22F76_Res
 [2421]
 UID=8185374682644538
 ROM=C:\Program Files (x86)\MCE-100\MaintenanceApps\ROM\iPhone11,8_18.5_22F76_Restore.ipsw
+
+[2433]
+UID=2926668058492974
+ROM=C:\Program Files (x86)\MCE-100\MaintenanceApps\ROM\iPhone12,3,iPhone12,5_18.5_22F76_Restore.ipsw
+
+[2291]
+UID=7957595659698204
+ROM=C:\Program Files (x86)\MCE-100\MaintenanceApps\ROM\iPhone16,1_18.5_22F76_Restore.ipsw
+
+[2381]
+UID=1743692533628974
+ROM=C:\Program Files (x86)\MCE-100\MaintenanceApps\ROM\iPhone12,3,iPhone12,5_18.5_22F76_Restore.ipsw
 
 
 
